Website/style.css
/* ... */
a{
    text-decoration: none;
}

.resNav{
    height: 100px;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
}

.profilePic{
    width: 80px;
    height: 80px;
    object-fit: cover;
    border-radius: 60px;
}

.resNavBrand{
    font-size: 28px;
    color: #000000;
    font-weight: 700;
}

.resNavSleep{
    font-size: 21px;
    color: #000000;
}

.resNavMood{
    font-size: 21px;
    color: #000000;
}

.resNavMeditation{
    font-size: 21px;
    color: #000000;
}

.resNavResource{
    font-size: 21px;
    font-weight: 700;
    text-decoration: underline;
    color: #000000;
}

.searchIcon{
    width: 60px;
    height: 60px;
    object-fit: cover;
}
/*Resources Nav Bar ends*/

.ResSection1{
    background-color: #40798C;
    height: 831px;
}

.ResSection1Header{
    margin: 0;
    font-size: 70px;
    color: white;
    text-align: center;
    
}
.ResSection1Top{
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    gap: 60px;
    justify-content: center;
    padding-top: 20px;
}
.rounded{
    border-radius: 22px;
}
.MassageCol{
    display: flex;
    flex-direction: column;
    align-items: center;
}
.btn-one{
    background-color: #F9F4F2; 
    border: none; 
    color: black;
    margin-top: 40px;
    border-radius: 22px;
    padding: 40px;
    width: 55%;
    margin-bottom: 15px;
    font-size: 20px;
    cursor: pointer;
}
.AcupunctureCol{
    display: flex;
    flex-direction: column;
    align-items: center;
}
.btn-two{
    background-color: #F9F4F2; 
    border: none; 
    color: black;
    margin-top: 40px;
    border-radius: 22px;
    padding: 40px;
    width: 55%;
    margin-bottom: 15px;
    font-size: 20px;
    cursor: pointer;
}
.CounsellingCol{
    display: flex;
    flex-direction: column;
    align-items: center;
}
.btn-three{
    background-color: #F9F4F2; 
    border: none; 
    color: black;
    margin-top: 40px;
    border-radius: 22px;
    padding: 40px;
    width: 55%;
    margin-bottom: 15px;
    font-size: 20px;
    cursor: pointer;
}
.ResSection2{
    background-color: #D6EDFF;
    justify-content: center;
}
.books{
    padding-left: 300px;
}
.row-one{
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    gap: 13px;
    cursor: pointer;
    object-fit: cover;
    justify-content: center;
}
.row-two{
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    gap: 13px;
    padding-top: 8px;
    cursor: pointer;
    object-fit: cover;
    justify-content: center;
}
.ResSection2Part2{
    display: flex;
    gap: 5px;
}
.ResBox1{  
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    padding-top: 70px;
    padding-bottom: 60px;
    gap: 50px;
    justify-content: center;
    flex-direction: row;
    align-items: flex-start;
}

.ResRightBox{
    display: flex;
    flex-direction: column;
    background-color: #F9F4F2;
    width: 344px;
    border-radius: 40px;
    height: 470px;

}
.ResBox2{
    display: flex;
    flex-direction: column;
    background-color: #F9F4F2;
    width: 344px;
    border-radius: 40px;
    height: 470px;
}
.ResBox3{
    display: flex;
    flex-direction: column;
    background-color: #F9F4F2;
    width: 344px;
    border-radius: 40px;
    height: 470px;
}


.ResBox1:hover{
    cursor: pointer;
}

.ResS1HeaderText{
    font-size: 24px;
    color: #191919;
    margin: 0;
}

.ResBoxTop{
    padding-top: 15px;
    padding-left: 35px;
}
.ResSection2Part3{
    justify-content: center;
}

.ResBoxBottom{
    padding-top: 70px;
}
.Headshot{
    border-radius: 40px;
    border: solid 2px black;
    margin-top: 20px;
    margin-left: 40px;
    object-fit: cover;
}
select{
    padding-left: 20%;
    width: 900px;
    height: 50px;
    padding: 0;
    display: flex;
    justify-content: center;
    border: solid 2px black;
    font-size: 18px;
    background-color: #F9F4F2;
    justify-content: center;
}



.ResourcesProBox{
    display: flex;
    flex-direction: column;
    background-color: #F9F4F2;
    width: 1100px;
    border-radius: 40px;
    height: 280px;
    justify-content: center;
}


.ResourcesProfileIcon{
    width: 70px;
    height: 70px;
    object-fit: cover;
    padding-left: 15px;
    padding-top: 10px;
}

.ResourcesProfile{
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 10px;
    padding-left: 50px;
    padding-top: 10px;
}

.ResourcesProfile2{
    display: flex;
    flex-direction: row;
    align-items: center;
    padding-left: 50px;
    padding-top: 70px;
    gap: 10px;
}

.ResourcesProText{
    font-size: 24px;
    color: #444444;
    margin: 0;
}
.RevStar{
    display: flex;
    flex-direction: row;
    align-items: center;
    object-fit: cover;
    gap: 5px;
}

.ResourcesS1HeaderText{
    font-size: 24px;
    color: #191919;
    margin: 0;
}

.ResourcesS1-1RightTop{
    padding-top: 15px;
    padding-left: 35px;
}

.ResourcesProBottom{
    padding-top: 10px;
    justify-content: center;
}

.Resources2BoxImage{
    width: 400px;
    height: 238px;
    object-fit: cover;
    border-radius: 15px;
    transition: 300ms;
}

.Resources2BoxImage:hover{
    box-shadow: 10px 10px 30px black;
    transition: 300ms;
}
.ResProText{
    display: flex;
    flex-direction: column;
}
.helpbuttons{
    justify-content: center;
}
.btn-help{
    background-color: #28444D; 
    border: none; 
    color: black;
    margin-top: 20px;
    border-radius: 15px;
    padding: 0px;
    width: 250px;
    height: 60px;
    margin-bottom: 15px;
    font-size: 20px;
    text-align: center;
    cursor: pointer;
    color: white;
}











/*Footer*/
.ResFooter{
    background-color: #28444D;
    height: 369px;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.ResFooter1{
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.ResFooterListItem{
    font-size: 18px;
    color: #F9F4F2;
}
/* ... */

